@@ -36,6 +36,7 @@
     to work with FVWM in some manner:
 
     <ul>
+      <li><a href="http://users.tpg.com.au/users/scottie7/fvwmtabs.html">FvwmTabs Module</a> - SCoTT SMeDLeY's FvwmTabs module.
       <li><a href="http://wm-icons.dhs.org/">Window Manager Icons</a> - an efficient icon distribution to use with fvwm and fvwm-themes.
       <li><a href="http://www.imada.ou.dk/~blackie/dotfile/">The Dotfile Generator Home Page</a> - A program that helps you generate .emacs, .cshrc, .fvwmrc, etc.
       <li><a href="http://newton.physics.arizona.edu/~lapeyre/fvwmconf/index.html">John Lapeyre's FvwmConf</a>
