@@ -488,14 +488,14 @@ in the menus are mostly taken from the
 	<!-- Cameron Simpson -->
       <tr valign="top"><td>
 	  <a href="Cameron_Simpson-desk-2560x1024.html">
-	    <img src="http://www.zip.com.au/~cs/fvwm/desktop0-thumb.jpg"
+	    <img src="http://www.cskk.ezoshosting.com/cs/fvwm/desktop0-thumb.jpg"
 	      alt="Cameron Simpson"
 	      width=160 height=120 align=left></a></td>
 	<td>
 	  Submitted by Cameron Simpson.  Uses Xinerama.
 This is the
 Zen style by Cameron Simpson,
-<a href="http://www.zip.com.au/~cs/fvwm/">details here</a>.
+<a href="http://www.cskk.ezoshosting.com/cs/fvwm/index.html">details here</a>.
 
       <tr valign="top"><td>
 	  <a href="Parv-desk-1024x768.html">
