@@ -1,3 +1,8 @@
+2003-01-15  Dan Espen  <dane@mk.telcordia.com>
+
+	* screenshots/index.html: Update location of Cameron Simpson's stuff.
+	* links.html: Provide link to SCoTT SMeDLeY's FvwmTabs module.
+
 2002-12-30  Dan Espen  <dane@mk.telcordia.com>
 
 	* screenshots/index.html: Change the link to the full size image to a link
